banner section done

--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,11 @@
   font-weight: <weight>;
   font-style: normal;
 }
+.noto-serif-head {
+  font-family: "Noto Serif", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
