main 1st part done

--- a/style/style.css
+++ b/style/style.css
@@ -12,3 +12,15 @@
   font-variation-settings:
     "wdth" 100;
 }
+
+/* main style */
+
+.plant-card-container{
+  width: 270px;
+  height: 485px;
+}
+.btn-cart{
+  height: 50px;
+  width: 270px;
+  color: white;
+}
