Plants Lover Section done

--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,6 @@
 }
 
 /* main style */
-
 .plant-card-container{
   width: 270px;
   height: 485px;
@@ -23,4 +22,9 @@
   height: 50px;
   width: 270px;
   color: white;
+}
+
+/* flower & plants lover */
+.flower-conatiner{
+  height: 597px;
 }
